Add: admin login and admin dashboard

--- a/SplashPageWebApp/SplashPageWebApp.csproj
+++ b/SplashPageWebApp/SplashPageWebApp.csproj
@@ -177,9 +177,61 @@
     <Compile Include="Services\SendEmailWithTemplate.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Administrator\css\bootstrap.min.css" />
+    <Content Include="Administrator\css\font-awesome.css" />
+    <Content Include="Administrator\css\font.css" />
+    <Content Include="Administrator\css\jqvmap.css" />
+    <Content Include="Administrator\css\lightbox.css" />
+    <Content Include="Administrator\css\minimal.css" />
+    <Content Include="Administrator\css\monthly.css" />
+    <Content Include="Administrator\css\morris.css" />
+    <Content Include="Administrator\css\style-responsive.css" />
+    <Content Include="Administrator\css\style.css" />
+    <Content Include="Administrator\fonts\fontawesome-webfont.svg" />
+    <Content Include="Administrator\images\1.png" />
+    <Content Include="Administrator\images\2.png" />
+    <Content Include="Administrator\images\3.png" />
+    <Content Include="Administrator\images\bg.jpg" />
+    <Content Include="Administrator\images\close.png" />
+    <Content Include="Administrator\images\g1.jpg" />
+    <Content Include="Administrator\images\g2.jpg" />
+    <Content Include="Administrator\images\g3.jpg" />
+    <Content Include="Administrator\images\g4.jpg" />
+    <Content Include="Administrator\images\g5.jpg" />
+    <Content Include="Administrator\images\g6.jpg" />
+    <Content Include="Administrator\images\g7.jpg" />
+    <Content Include="Administrator\images\g8.jpg" />
+    <Content Include="Administrator\images\g9.jpg" />
+    <Content Include="Administrator\images\mail.png" />
+    <Content Include="Administrator\images\minimal.png" />
+    <Content Include="Administrator\images\nav-expand.png" />
+    <Content Include="Administrator\images\next.png" />
+    <Content Include="Administrator\images\pass.png" />
+    <Content Include="Administrator\images\prev.png" />
+    <Content Include="Administrator\images\search-icon.png" />
+    <Content Include="Administrator\js\bootstrap.js" />
+    <Content Include="Administrator\js\jquery.dcjqaccordion.2.7.js" />
+    <Content Include="Administrator\js\jquery.fileupload.js" />
+    <Content Include="Administrator\js\jquery.min.js" />
+    <Content Include="Administrator\js\jquery.nicescroll.js" />
+    <Content Include="Administrator\js\jquery.scrollTo.js" />
+    <Content Include="Administrator\js\jquery.slimscroll.js" />
+    <Content Include="Administrator\js\jquery.vmap.asia.js" />
+    <Content Include="Administrator\js\jquery.vmap.australia.js" />
+    <Content Include="Administrator\js\jquery.vmap.europe.js" />
+    <Content Include="Administrator\js\jquery.vmap.js" />
+    <Content Include="Administrator\js\jquery.vmap.sampledata.js" />
+    <Content Include="Administrator\js\jquery.vmap.world.js" />
+    <Content Include="Administrator\js\jquery2.0.3.min.js" />
+    <Content Include="Administrator\js\lightbox-plus-jquery.min.js" />
+    <Content Include="Administrator\js\monthly.js" />
+    <Content Include="Administrator\js\morris.js" />
+    <Content Include="Administrator\js\raphael-min.js" />
+    <Content Include="Administrator\js\script.js" />
+    <Content Include="Administrator\js\scripts.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="EmailTemplate\index.html" />
+    <Content Include="EmailTemplate\EmailTemplate.html" />
     <Content Include="favicon.ico" />
     <Content Include="FISProject\css\connectederror.css" />
     <Content Include="FISProject\css\font-awesome.css" />
@@ -221,6 +273,13 @@
     <Content Include="FISProject\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="FISProject\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="FISProject\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Administrator\fonts\fontawesome-webfont.eot" />
+    <Content Include="Administrator\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Administrator\fonts\fontawesome-webfont.woff" />
+    <Content Include="Administrator\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Administrator\fonts\FontAwesome.otf" />
+    <Content Include="Administrator\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Administrator\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\fis-hcm - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -252,6 +311,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Login\ConnectedError.cshtml" />
+    <Content Include="Views\Login\AdminLogin.cshtml" />
+    <Content Include="Views\Login\AdminPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
