--- a/SplashPageWebApp/Web.config
+++ b/SplashPageWebApp/Web.config
@@ -63,7 +63,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="testwifiEntities" connectionString="metadata=res://*/Models.testwifi.csdl|res://*/Models.testwifi.ssdl|res://*/Models.testwifi.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wififree.database.windows.net;initial catalog=testwifi;user id=tuanhd;password=P@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="testwifiEntities" connectionString="metadata=res://*/Models.testwifi.csdl|res://*/Models.testwifi.ssdl|res://*/Models.testwifi.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wififree.database.windows.net;initial catalog=testwifi;user id=tuanhd;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
