--- a/SplashPageWebApp/SplashPageWebApp.csproj
+++ b/SplashPageWebApp/SplashPageWebApp.csproj
@@ -179,6 +179,8 @@
       <DependentUpon>testwifi.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GeneratedCode.cs" />
+    <Compile Include="Services\SendEmailWithTemplate.cs" />
     <Compile Include="Services\UserAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -318,6 +320,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\button.css" />
     <Content Include="EmailTemplate\EmailTemplate.html" />
     <Content Include="favicon.ico" />
     <Content Include="FISProject\css\connectederror.css" />
