--- a/SplashPageWebApp/Web.config
+++ b/SplashPageWebApp/Web.config
@@ -5,9 +5,15 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <sectionGroup name="WebAppSettingsGroup">
+      <section name="WebAppSettings" type="SplashPageWebApp.Configs.SettingsSection" requirePermission="false"/>
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <WebAppSettingsGroup>
+    <WebAppSettings configSource="Configs\WebAppSettings.config"/>
+  </WebAppSettingsGroup>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
