--- a/SplashPageWebApp/SplashPageWebApp.csproj
+++ b/SplashPageWebApp/SplashPageWebApp.csproj
@@ -417,6 +417,7 @@
     <Content Include="Views\Admin\AdminPage.cshtml" />
     <Content Include="Scripts\jquery-3.2.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.2.1.min.map" />
+    <Content Include="Views\Login\ActivateCode.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
