update config file

--- a/SplashPageWebApp/Configs/WebAppSettings.config
+++ b/SplashPageWebApp/Configs/WebAppSettings.config
@@ -4,7 +4,7 @@
     <add name="domain" value="gmail"/>
     <add name="send-email-address" value="freewifi.fis@gmail.com"/>
     <add name="send-email-sender" value="FPT Wi-Fi Hotspot"/>
-    <add name="send-email-password" value=""/>
-    <add name="send-email-subject" value=""/>
+    <add name="send-email-password" value="zehcrryaxdsvvcpj"/>
+    <add name="send-email-subject" value="Grant Internet Usage Permission"/>
   </Settings>
 </WebAppSettings>
