--- a/SplashPageWebApp/Configs/WebAppSettings.config
+++ b/SplashPageWebApp/Configs/WebAppSettings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <WebAppSettings name="webappsettings">
   <Settings foo="bar">
-    <add name="domain" value="gmail"/>
+    <add name="domain" value="gmail.com"/>
     <add name="send-email-address" value="freewifi.fis@gmail.com"/>
     <add name="send-email-sender" value="FPT Wi-Fi Hotspot"/>
     <add name="send-email-password" value="zehcrryaxdsvvcpj"/>
